--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -22,6 +22,11 @@
 .navbar-top img {
     height: 10rem;
     width: 10rem;
+    transition: all .35s ease;
+}
+.navbar-top img:hover {
+    transform: scale(1.065);
+    cursor: pointer;
 }
 .navbar-top h1 {
     margin-top: 1rem;
