--- a/src/3-Work/work.css
+++ b/src/3-Work/work.css
@@ -80,8 +80,8 @@
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     width: 90%;
-    margin-top: 2.5rem;
-    gap: .25rem 2.5rem;
+    margin-top: 3.5rem;
+    gap: 2.5rem;
 }
 .port-item {
     flex: 1;
@@ -90,8 +90,8 @@
     justify-content: space-between;
     height: 27.5rem;
     width: 100%;
-    margin: 1rem 0;
-    border: 1px solid black;
+    border-radius: .5rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 
@@ -100,6 +100,7 @@
     height: 100%;
     width: 100%;
     flex: 1;
+    border-radius: .5rem 0 0 .5rem;
 }
 .port-gif {
 }
@@ -119,6 +120,7 @@
     background-color: rgba(0, 0, 0, .35);
     height: 100%;
     padding: 0 1rem;
+    border-radius: 0 .5rem .5rem 0;
 }
 .port-title {
     font-size: 2.75rem;
