--- a/src/3-Work/work.css
+++ b/src/3-Work/work.css
@@ -77,8 +77,8 @@
 /* PORTFOLIO */
 .port-items {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto auto;
+    grid-template-columns: auto;
     width: 90%;
     margin-top: 3.5rem;
     gap: 2.5rem;
@@ -99,10 +99,12 @@
     background-color: #08fdd8;
     height: 100%;
     width: 100%;
-    flex: 1;
+    flex: 2;
     border-radius: .5rem 0 0 .5rem;
 }
 .port-gif {
+    height: 27.5rem;
+    width: auto;
 }
 .portGifPopup {
 }
@@ -111,7 +113,7 @@
 
 
 .port-text-box {
-    flex: 1;
+    flex: 3;
     display: flex;
     align-items: center;
     justify-content: center;
