--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     flex-direction: column;
     background-color: #181818;
-    height: 100vh;
+    height: 100%;
     width: 18.5rem;
     top: 0;
     left: 0;
