gitting iframes working

--- a/src/3-Work/Modal/modal.css
+++ b/src/3-Work/Modal/modal.css
@@ -21,3 +21,41 @@
 #leave-modal:hover {
     transform: rotate(-90deg);
 }
+
+
+.modal-video-wrapper {
+}
+.modal-video-title {
+}
+
+
+.modal-text-wrapper {
+}
+.modal-title-wrapper {
+}
+.modal-title-wrapper img {
+}
+.modal-title {
+}
+
+.modal-tools-wrapper {
+}
+.modal-tools-wrapper img {
+}
+
+.modal-link {
+}
+
+.modal-description {
+}
+
+.modal-features {
+}
+.modal-feature {
+}
+
+.modal-finisher {
+}
+
+.modal-visit-site {
+}
