--- a/src/3-Work/Modal/modal.css
+++ b/src/3-Work/Modal/modal.css
@@ -22,40 +22,205 @@
     transform: rotate(-90deg);
 }
 
+.modal-wrapper {
+    height: 80%;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: .75rem;
+    background-color: #222;
+}
 
 .modal-video-wrapper {
+    width: 50%;
+    height: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
 }
 .modal-video-title {
+    font-size: 4rem;
+    font-weight: 800;
+    width: fit-content;
+    text-align: center;
+    line-height: 3rem;
+}
+.modal-video-title span:first-of-type {
+    font-size: 2rem;
+    color: #bbb;
+}
+.modal-video-title span:last-of-type {
+    color: #08fdd8;
+    font-size: 3.85rem;
+    font-weight: 600;
+}
+#modal-trade {
+    display: inline-block;
+    font-size: 3.25rem;
+}
+.iframe-wrapper {
+    position: relative;
+    width: 90%;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+.iframe-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border: 3px solid whitesmoke;
+    border-radius: .5rem;
 }
 
 
 .modal-text-wrapper {
+    border-radius: .5rem;
+    width: 45%;
+    height: 95%;
+    margin-left: 2.5%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    background-color: #373737;
+}
+.modal-header {
+    align-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 3.5rem;
 }
 .modal-title-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .modal-title-wrapper img {
+    height: 5.25rem;
+    width: 5.25rem;
+    margin-right: 1.65rem;
 }
 .modal-title {
+    font-size: 5rem;
 }
-
-.modal-tools-wrapper {
-}
-.modal-tools-wrapper img {
-}
-
 .modal-link {
+    font-size: 1.85rem;
+    font-weight: 300;
+    color: white;
+    padding: .5rem 0 1rem;
+    text-decoration: underline;
+}
+.modal-tools-wrapper {
+    padding: 1rem 0 0;
+}
+.modal-tool {
+    height: 3.25rem;
+    width: 3.25rem;
+    margin: 0 .65rem;
+    color: #08fdd8;
 }
 
+
+.modal-body {
+    align-self: center;
+    width: 80%;
+}
 .modal-description {
+    font-size: 2rem;
 }
-
+.modal-features-header {
+    font-size: 1.5rem;
+    padding: 1rem 0 0;
+}
 .modal-features {
+    padding: .5rem 0;
+    padding-left: 1.85rem;
 }
 .modal-feature {
+    font-size: 1.85rem;
+    font-weight: 800;
+}
+.modal-finisher {
+    font-size: 1.65rem;
 }
 
-.modal-finisher {
-}
 
 .modal-visit-site {
+    align-self: center;
+    position: relative;
+    width: 60%;
+    height: 5rem;
+    font-size: 2rem;
+    margin-bottom: 3rem;
+}
+.modal-visit-wrap {
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transform: translateZ(-25px);
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+.modal-visit-wrap .front,
+.modal-visit-wrap .back {
+    margin: 0;
+    width: 100%;
+    height: 48px;
+    line-height: 48px;
+    position: absolute;
+    text-align: center;
+    letter-spacing: 0.4em;
+}
+.modal-visit-wrap .front {
+    background-color: #373737;
+    color: #fff;
+    transform: rotateY(0) translateZ(24px);
+}
+.modal-visit-wrap .back {
+    background-color: rgba(255,255,255,0);
+    color: rgba(34,34,34,0);
+    transform: rotateX(90deg) translateZ(24px);
+    overflow: hidden;
+}
+.modal-visit-wrap .back:after {
+    content: '';
+    position: absolute;
+    top: -100%;
+    left: -80%;
+    width: 200%;
+    height: 250%;
+    background: #373737;
+    transform: rotate(8deg);
+    transition: all 0.65s ease;
+    transition-delay: 0.25s;
+}
+.modal-visit-wrap:hover {
+    transform: translateZ(-24px) rotateX(-90deg);
+}
+.modal-visit-wrap:hover .front {
+    background: #373737;
+    transition: all 0.8s ease;
+}
+.modal-visit-wrap:hover .back {
+    color: #373737;
+    transition: color 0.4s linear;
+    background: #fff;
+}
+.modal-visit-wrap:hover .back:after {
+    transform: rotate(6deg) translate(100px, -120px);
 }
