--- a/src/3-Work/Modal/modal.css
+++ b/src/3-Work/Modal/modal.css
@@ -35,10 +35,10 @@
 
 .modal-video-wrapper {
     width: 50%;
-    height: 90%;
+    height: 95%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-direction: column;
 }
 .modal-video-title {
@@ -46,16 +46,18 @@
     font-weight: 800;
     width: fit-content;
     text-align: center;
-    line-height: 3rem;
+    line-height: 3.125rem;
+    margin-bottom: -1rem;
+    margin-top: 1rem;
 }
 .modal-video-title span:first-of-type {
     font-size: 2rem;
-    color: #bbb;
+    color: #949494;
 }
 .modal-video-title span:last-of-type {
-    color: #08fdd8;
-    font-size: 3.85rem;
+    font-size: 3.5rem;
     font-weight: 600;
+    color: #949494;
 }
 #modal-trade {
     display: inline-block;
@@ -75,11 +77,35 @@
     right: 0;
     width: 100%;
     height: 100%;
-    border: 3px solid whitesmoke;
     border-radius: .5rem;
 }
-
-
+.modal-tech-wrapper {
+    background-color: #373737;
+    width: 90%;
+    padding: 1rem 2rem 1.25rem;
+    border-radius: .5rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.modal-tech-wrapper h1 {
+    text-align: center;
+    font-size: 2.25rem;
+    font-weight: 600;
+    padding: .2rem 0 .8rem;
+    color: #08fdd8;
+}
+.modal-techs {
+    font-size: 1.65rem;
+    font-weight: 300;
+    line-height: 2.65rem;
+    word-spacing: 2px;
+    color: #ddd;
+    font-style: italic;
+}
+.modal-techs span {
+    font-size: 2rem;
+    font-weight: 800;
+    font-style: normal;
+}
 .modal-text-wrapper {
     border-radius: .5rem;
     width: 45%;
@@ -111,7 +137,7 @@
     margin-right: 1.65rem;
 }
 .modal-title {
-    font-size: 5rem;
+    font-size: 4.35rem;
 }
 .modal-link {
     font-size: 1.85rem;
@@ -121,7 +147,8 @@
     text-decoration: underline;
 }
 .modal-tools-wrapper {
-    padding: 1rem 0 0;
+    padding: 1.25rem 0 0;
+    margin-bottom: -1rem;
 }
 .modal-tool {
     height: 3.25rem;
@@ -129,29 +156,54 @@
     margin: 0 .65rem;
     color: #08fdd8;
 }
+.modal-tool:hover {
+    animation: toolBounce 1s ease-in-out;
+}
+@keyframes toolBounce {
+    from {transform: scale3d(1, 1, 1)}
+    30% {transform: scale3d(1.25, 0.75, 1)}
+    40% {transform: scale3d(0.75, 1.2, 1)}
+    50% {transform: scale3d(1.15, 0.85, 1)}
+    65% {transform: scale3d(.95, 1.05, 1)}
+    75% {transform: scale3d(1.05, .95, 1)}
+    to {transform: scale3d(1, 1, 1)}
+}
 
 
 .modal-body {
     align-self: center;
-    width: 80%;
+    width: 90%;
+    margin-bottom: -2.25rem;
 }
 .modal-description {
-    font-size: 2rem;
+    font-size: 1.8rem;
+    line-height: 2.85rem;
+    padding-bottom: 1.5rem;
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+    height: 45%;
 }
 .modal-features-header {
-    font-size: 1.5rem;
-    padding: 1rem 0 0;
+    font-size: 2.25rem;
+    font-weight: 500;
+    color: #ddd;
+    text-shadow: 1.5px 1.5px 2px black;
+    line-height: 2rem;
+    padding: .65rem 0 .35rem;
+    width: fit-content;
+    margin: 0 auto;
+    text-align: center;
 }
 .modal-features {
-    padding: .5rem 0;
-    padding-left: 1.85rem;
+    padding: 1rem 0 2rem;
+    margin: 0 auto;
+    border-bottom: 1px solid gray;
+    padding-left: 5rem;
 }
 .modal-feature {
-    font-size: 1.85rem;
-    font-weight: 800;
-}
-.modal-finisher {
-    font-size: 1.65rem;
+    font-size: 1.75rem;
+    line-height: 2.4rem;
+    font-weight: 600;
 }
 
 
@@ -159,9 +211,10 @@
     align-self: center;
     position: relative;
     width: 60%;
-    height: 5rem;
+    height: 4.5rem;
     font-size: 2rem;
-    margin-bottom: 3rem;
+    margin-top: -.25rem;
+    margin-bottom: 3.25rem;
 }
 .modal-visit-wrap {
     font-weight: 400;
