--- a/src/2-Skills/skills.css
+++ b/src/2-Skills/skills.css
@@ -46,12 +46,12 @@
     margin-top: 7.5rem;
 }
 @keyframes skilsHeadFade {
-    10% {opacity: 0;}
-    50% {margin-top: 0rem; margin-bottom: 0rem;}
-    100% {opacity: 1; margin-top: 0rem; margin-bottom: 0rem;}
+    10% {opacity: 0}
+    50% {margin-top: 0rem; margin-bottom: 0rem}
+    100% {opacity: 1; margin-top: 0rem; margin-bottom: 0rem}
 }
 @keyframes skilsBoxFade {
-    100% {opacity: 1;}
+    100% {opacity: 1}
 }
 .skills-box {
     position: relative;
@@ -66,7 +66,7 @@
     background-color: rgba(0, 0, 0, .25);
     color: whitesmoke;
     border-radius: 1rem;
-    animation: skilsBoxFade 2s ease forwards;
+    animation: skilsBoxFade 1.75s ease forwards;
     opacity: 0;
 }
 .skills-title {
@@ -122,16 +122,16 @@
     font-size: 1.35rem;
     line-height: 1.4;
 }
-#ReactSkill {animation: skilsBoxFade 1s ease .5s forwards; opacity: 0}
-#ReduxSkill {animation: skilsBoxFade 1s ease 1s forwards; opacity: 0}
-#JavascriptSkill {animation: skilsBoxFade 1s ease 1.5s forwards; opacity: 0}
-#RubySkill {animation: skilsBoxFade 1s ease 2s forwards; opacity: 0}
-#CSSSkill {animation: skilsBoxFade 1s ease 2.5s forwards; opacity: 0}
-#NodeSkill {animation: skilsBoxFade 1s ease .5s forwards; opacity: 0}
-#MongoDBSkill {animation: skilsBoxFade 1s ease 1s forwards; opacity: 0}
-#SQLSkill {animation: skilsBoxFade 1s ease 1.5s forwards; opacity: 0}
-#RubyonRailsSkill {animation: skilsBoxFade 1s ease 2s forwards; opacity: 0}
-#FirebaseSkill {animation: skilsBoxFade 1s ease 2.5s forwards; opacity: 0}
+#ReactSkill {animation: skilsBoxFade 1s ease .75s forwards; opacity: 0}
+#ReduxSkill {animation: skilsBoxFade 1s ease 1.25s forwards; opacity: 0}
+#JavascriptSkill {animation: skilsBoxFade 1s ease 1.75s forwards; opacity: 0}
+#RubySkill {animation: skilsBoxFade 1s ease 2.25s forwards; opacity: 0}
+#CSSSkill {animation: skilsBoxFade 1s ease 2.75s forwards; opacity: 0}
+#NodeSkill {animation: skilsBoxFade 1s ease .75s forwards; opacity: 0}
+#MongoDBSkill {animation: skilsBoxFade 1s ease 1.25s forwards; opacity: 0}
+#SQLSkill {animation: skilsBoxFade 1s ease 1.75s forwards; opacity: 0}
+#RubyonRailsSkill {animation: skilsBoxFade 1s ease 2.25s forwards; opacity: 0}
+#FirebaseSkill {animation: skilsBoxFade 1s ease 2.75s forwards; opacity: 0}
 
 .education-separator {
     width: 0;
@@ -161,8 +161,8 @@
     color: white;
     font-size: 6rem;
     font-weight: 600;
-    margin-top: 3.5rem;
-    margin-bottom: -3.5rem;
+    margin-top: 5rem;
+    margin-bottom: -5rem;
     opacity: 0;
 }
 .education-header span {
